--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,2 +1,12 @@
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
 report.videoRecorderOption="{\\"enable\\"\:false,\\"useBrowserRecorder\\"\:true,\\"videoFormat\\"\:\\"AVI\\",\\"videoQuality\\"\:\\"LOW\\",\\"recordAllTestCases\\"\:false,\\"allowedRecordIfFailed\\"\:true,\\"allowedRecordIfPassed\\"\:false}"
+execution.logTestSteps=true
+execution.hideHostName=false
+execution.default.timeout=10
+execution.default.openReportAfterExecuting=false
+execution.default.quitDriversAfterExecutingTestCase=false
+execution.default.quitDriversAfterExecutingTestSuite=false
+report.takeScreenshotOption=true
+report.takeScreenshotSettings="{\\"enable\\"\:true}"
+report.videoRecorderSettings="{\\"enable\\"\:true,\\"useBrowserRecorder\\"\:true,\\"videoFormat\\"\:\\"MP4\\",\\"videoQuality\\"\:\\"MEDIUM\\",\\"recordAllTestCases\\"\:true}"
+execution.default.executionConfiguration="Edge Chromium"
