--- a/settings/internal/com.kms.katalon.execution.webservice.properties
+++ b/settings/internal/com.kms.katalon.execution.webservice.properties
@@ -1,2 +1,4 @@
-#Thu Jul 24 20:37:36 WIB 2025
 execution.webservice.followRedirects=true
+execution.webservice.connectionTimeout=0
+execution.webservice.socketTimeout=0
+execution.webservice.maxResponseSize=0
