--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -7,8 +7,8 @@ execution.default.timeout=30
 execution.default.openReportAfterExecuting=false
 execution.default.quitDriversAfterExecutingTestCase=false
 execution.default.quitDriversAfterExecutingTestSuite=true
-report.takeScreenshotOption=true
-report.takeScreenshotSettings="{\\"enable\\"\:true}"
+report.takeScreenshotOption=false
+report.takeScreenshotSettings="{\\"enable\\"\:false}"
 report.videoRecorderSettings="{\\"enable\\"\:true,\\"useBrowserRecorder\\"\:true,\\"videoFormat\\"\:\\"AVI\\",\\"videoQuality\\"\:\\"MEDIUM\\",\\"recordAllTestCases\\"\:true}"
 execution.launch.vmArgs=""
 execution.default.smartWaitMode=true
