--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -7,11 +7,11 @@ execution.default.timeout=30
 execution.default.openReportAfterExecuting=false
 execution.default.quitDriversAfterExecutingTestCase=false
 execution.default.quitDriversAfterExecutingTestSuite=true
-report.takeScreenshotOption=true
-report.takeScreenshotSettings="{\\"enable\\"\:true}"
-report.videoRecorderSettings="{\\"enable\\"\:true,\\"useBrowserRecorder\\"\:true,\\"videoFormat\\"\:\\"AVI\\",\\"videoQuality\\"\:\\"MEDIUM\\",\\"recordAllTestCases\\"\:true}"
+report.takeScreenshotOption=false
+report.takeScreenshotSettings="{\\"enable\\"\:false}"
+report.videoRecorderSettings="{\\"enable\\"\:false,\\"useBrowserRecorder\\"\:true,\\"videoFormat\\"\:\\"AVI\\",\\"videoQuality\\"\:\\"MEDIUM\\",\\"recordAllTestCases\\"\:true}"
 execution.launch.vmArgs=""
-execution.default.smartWaitMode=true
+execution.default.smartWaitMode=false
 execution.default.webUi.timeCapsuleEnabled=false
 execution.default.smartLocatorEnabled=true
 execution.default.webUi.methodsPriorityOrderNew="XPATH,true;SMART_LOCATOR,true;BASIC,true;CSS,true;IMAGE,true"
