--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -25,3 +25,8 @@ execution.default.webUi.flutterAppTesting=false
 execution.default.webUi.canvasTextExtraction=false
 execution.default.webUi.closedShadowDOMTesting=false
 plugin.reloadOption="ONLINE_AND_OFFLINE"
+execution.default.bufferedSelectorMethod="XPATH"
+execution.default.isUsingSmartLocator=false
+execution.default.selectingCapturedObjectXpaths="xpath\:attributes,true;xpath\:idRelative,true;dom\:name,true;xpath\:link,true;xpath\:neighbor,true;xpath\:href,true;xpath\:img,true;xpath\:position,true;xpath\:customAttributes,true"
+execution.default.selectingCapturedObjectProperties="id,true;name,true;alt,true;checked,true;form,true;href,true;placeholder,true;selected,true;src,true;title,true;type,true;text,true;linked_text,true"
+execution.default.recorderPlus.setting=""
